force-app/main/default/objects/Project__c/fields/Squad_Lead__c.field-meta.xml
<CustomField>
    <fullName>Squad_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Squad Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_Squad_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>