force-app/main/default/objects/Project__c/fields/Total_Allocated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocated_Hours__c</fullName>
    <label>Total Allocated Hours</label>
    <summarizedField>Project_Resource__c.Allocated_Hours__c</summarizedField>
    <summaryForeignKey>Project_Resource__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>